--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,7 +131,7 @@ h6 {
 }
 
 #app {
-  padding-top: 50px;
+  position: relative;
   background-color: cadetblue;
   display: flex;
   flex-direction: column;
@@ -140,7 +140,33 @@ h6 {
   height: 100vh;
 }
 
+#app .win {
+  position: absolute;
+  padding: 0 10px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
+
+#app .win-video {
+  width: 100%;
+  max-width: 500px;
+}
+
+#app .win .again-button {
+  margin-top: 15px;
+  width: 150px;
+  padding: 5px;
+}
+
 #app form {
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
