--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -66,6 +66,9 @@
     button {
       width: 150px;
       padding: 5px;
+      &.reset {
+        display: none;
+      }
     }
   }
   .information {
